--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,9 @@ PORT=5000
 DATABASE_URL=mysql://username:password@host/database?sslaccept=strict
 JWT_SECRET=super_secret_key
 BCRYPT_SALT_ROUNDS=10
+MPESA_CONSUMER_KEY=xxxx
+MPESA_CONSUMER_SECRET=xxxx
+MPESA_SHORTCODE=174379
+MPESA_PASSKEY=xxxx
+MPESA_ENV=sandbox
+MPESA_CALLBACK_URL=https://yourdomain.com/api/mpesa/callback
